--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -3,5 +3,13 @@ header {
 	margin-bottom: 2rem;
 	font-size: 5rem;
     color: #2E4158;
-    text-align: center;
+	text-align: center;
 }
+
+img {
+	padding: 10px;
+	width: 100px;
+	max-width: 100%;
+	height: auto;
+	vertical-align: middle;
+  }
