--- a/client/src/components/Contact/contact.css
+++ b/client/src/components/Contact/contact.css
@@ -11,7 +11,8 @@
   
   .App__Form__Full {
     width: 100%;
-    background-color: #2E4158;
+    background-color: #F8F8FF;
+    /* background-color: #2E4158; */
     padding: 25px 40px;
     overflow: auto;
   }
