--- a/client/src/components/Navigation/Navigation.css
+++ b/client/src/components/Navigation/Navigation.css
@@ -11,7 +11,7 @@
 
 .App__Form {
     width: 50%;
-    background-color: #2E4158;
+    background-color:#F8F8FF;
     padding: 25px 40px;
     overflow: auto;
 }
