new styling branch test

--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -5,6 +5,7 @@ header {
     color: #2E4158;
 	text-align: left;
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	/* This is a test  */
 }
 
 img {
