--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,16 +1,16 @@
 header {
-	background: #F8F8FF;
-	margin-bottom: 2rem;
-	font-size: 2rem;
-    color: #2E4158;
+	background:   #2E4158;
+	/* margin-bottom: 1rem; */
+	font-size: 1.5rem;
+    color: #f9f9f9;
 	text-align: left;
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
-	/* This is a test  */
+	/* margin-top: 10px; */
 }
 
 img {
 	padding: 10px;
-	width: 5%;
+	width: 50px;
 	max-width: 100%;
 	height: auto;
 	vertical-align: middle;
