--- a/client/src/components/Newsletter/index.css
+++ b/client/src/components/Newsletter/index.css
@@ -1,7 +1,8 @@
 h2.newsletterTitle {
-    color: #2E4158;
+    color: #01579b;
     font-weight: 300;
     margin-bottom: 80px;
     text-align: center;
     font-size: 70px;
+    margin-top: 30px;
 }
