--- a/client/src/components/SignOut/button.css
+++ b/client/src/components/SignOut/button.css
@@ -1,11 +1,11 @@
 .Button {
-    background-color: #52C4B9;
+    background-color: #E4158;
     color: white;
     border: none;
     outline: none;
     border-radius: 10px;
-    padding: 2px 2px;
-    font-size: .8em;
-    font-weight: 200;
+    padding: 2px 7px;
+    font-size: 15px;
+    font-weight: 350;
     text-align: center;
 }
