--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -69,3 +69,39 @@ img {
     width: 8%;
     height: auto;
 }
+
+.App__Form__Full {
+  width: 100%;
+  background-color: #F8F8FF;
+  /* background-color: #2E4158; */
+  padding: 25px 40px;
+  overflow: auto;
+}
+
+.FormTitleContact {
+  color: #01579b;
+  font-weight: 300;
+  margin-bottom: 80px;
+  text-align: center;
+  font-size: 70px;
+  margin-top: 30px;
+
+}
+
+.Contact__Form__Display {
+  margin-bottom: 60px;
+  width: 100%;
+  align-content: center;
+}
+
+.ContactForm__Button {
+  background-color: #52C4B9;
+  color: white;
+  border: none;
+  outline: none;
+  border-radius: 25px;
+  padding: 15px 70px;
+  font-size: .8em;
+  font-weight: 500;
+  text-align: center;
+}
