--- a/client/src/components/SignIn/SignIn.css
+++ b/client/src/components/SignIn/SignIn.css
@@ -1,17 +1,12 @@
-.App {
+/* .App {
     height: 100vh;
     display: flex;
     color: white;
-}
+} */
 
-.App__Aside {
-    width: 50%;
-    background-color: #66DAC7;
-}
 
 .App__Form {
-    width: 50%;
-    background-color: #2E4158;
+    background-color:  #F8F8FF;
     padding: 25px 40px;
     overflow: auto;
 }
@@ -23,7 +18,7 @@
 }
 
 .PageSwitcher__Item {
-    background-color: #4C5D72;
+    background-color: rgb(19, 55, 98);
     color: #9DA6B1;
     padding: 10px 25px;
     cursor: pointer;
@@ -33,39 +28,46 @@
     display: inline-block;
     text-decoration: none;
 }
-
+/* 
 .PageSwitcher__Item--Active {
     background-color: #5ED0C0;
     color: white;
-}
+} */
 
-.PageSwitcher__Item:first-child {
+/* .PageSwitcher__Item:first-child {
     border-top-left-radius: 25px;
     border-bottom-left-radius: 25px;
 }
 .PageSwitcher__Item:last-child {
     border-top-right-radius: 25px;
     border-bottom-right-radius: 25px;
-}
+} */
 
 .FormCenter {
     margin-bottom: 100px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
 
 .FormTitle {
-    color: #707C8B;
+    color: #01579b;
     font-weight: 300;
-    margin-bottom: 50px;
+    margin-bottom: 80px;
+    text-align: center;
+    font-size: 70px;
+    margin-top: 30px;
+  
 }
 
-.FormTitle__Link {
-    color: #707C8B;
+/* .FormTitle__Link {
+    color: #01579b;
     text-decoration: none;
     display: inline-block;
     font-size: 1.7em;
     margin: 0 10px;
     padding-bottom: 5px;
-}
+} */
 
 .FormTitle__Link:first-child {
     margin-left: 0;
@@ -84,19 +86,21 @@
     display: block;
     text-transform: uppercase;
     font-size: .9em;
-    color: white;
+    color:#01579b;
+    text-align: center;
 }
 .FormField__Input {
     width: 85%;
     background-color: transparent;
     border: none;
-    color: white;
+    color: #01579b;
     outline: none;
     border-bottom: 1px solid #445366;
     font-size: 1em;
     font-weight: 300;
     padding-bottom: 10px;
     margin-top: 10px;
+    text-align: center;
 }
 
 .FormField__Input::placeholder {
@@ -115,15 +119,15 @@
     text-align: center;
 }
 
-.FormField__Link {
+/* .FormField__Link {
     color: #66707D;
     text-decoration: none;
     display: inline-block;
     border-bottom: 1.5px solid #225E62;
     padding-bottom: 5px;
-}
+} */
 
-.FormField__CheckboxLabel {
+/* .FormField__CheckboxLabel {
     color: #646F7D;
     font-size: .9em;
 }
@@ -131,13 +135,13 @@
 .FormField__Checkbox {
     position: relative;
     top: 1.5px;
-}
+} */
 
-.FormField__TermsLink {
+/* .FormField__TermsLink {
     color: white;
     border-bottom: 1px solid #199087;
     text-decoration: none;
     display: inline-block;
     padding-bottom: 2px;
     margin-left: 5px;
-}
+} */
