--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -105,3 +105,9 @@ img {
   font-weight: 500;
   text-align: center;
 }
+
+@media only screen and (max-width: 700px) {
+  .carousel {
+    width: 100%;
+  }
+}
