--- a/client/src/components/Contact/contact.css
+++ b/client/src/components/Contact/contact.css
@@ -4,42 +4,22 @@
     color: white;
   }
 
-  .App__Aside {
-    width: 50%;
-    background-color:#4d9dc9;
-  }
-
+  /* Background of the app */
   .App__Form__Full {
     width: 100%;
     background-color: #F8F8FF;
-    /* background-color: #2E4158; */
     padding: 25px 40px;
     overflow: auto;
   }
 
+  /* Blurbs about team members */
   .Contact_Description {
     text-align: center;
     font-size: 20px;
     margin-bottom: 60px;
     color:  #2E4158;
   }
-  
-  .Contact__Form__Display {
-    margin-bottom: 60px;
-    width: 100%;
-    align-content: center;
-  }
-  
-  .ContactForm__Button {
-    background-color: #4d9dc9;
-    color: white;
-    border: none;
-    outline: none;
-    border-radius: 25px;
-    padding: 15px 70px;
-    font-size: .8em;
-    font-weight: 500;
-    text-align: center;
-  }
+ 
+
   
   
